2002-05-13  Richard M. Stallman  <rms@gnu.org>

	* search.c (search_buffer): Give up boyer moore search if inverse
	translation change charset_base.

2002-05-12  Eli Zaretskii  <eliz@is.elta.co.il>

	* coding.c (decode_coding) <coding_type_ccl>: If a lone CR
	characters is carried over from the previous block of text, adjust
	coding->produced to account for the extra character.

2002-05-10  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (enum_font_cb2): Don't use DBCS raster fonts.

2002-05-10  Eli Zaretskii  <eliz@is.elta.co.il>

	* coding.c (encode_coding_sjis_big5): Enclose bitwise AND in
	parens, to ensure correct evaluation order.

2002-05-07  Eli Zaretskii  <eliz@is.elta.co.il>

	* fileio.c (read_non_regular): Remove an extraneous call to Fsignal.

2002-05-06  Jason Rumney  <jasonr@gnu.org>

	* w32bdf.c (w32_load_bdf_font): Set fonts_changed_p.

2002-05-03  Gerd Moellmann  <gerd@gnu.org>

	* indent.c (Fvertical_motion): Move to the start of the line
	containing PT before moving up or down.

2002-04-19  Eli Zaretskii  <eliz@is.elta.co.il>

	* s/sol2-5.h (bcopy, bzero, bcmp): Define only if HAVE_BCOPY is
	not defined.

2002-04-17  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (Fx_file_dialog): Decode file name before using.

	* w32term.c (construct_drag_n_drop): Likewise.

2002-04-16  Gerd Moellmann  <gerd@gnu.org>

	* buffer.c (MMAP_ALLOCATED_P): New macro to be set from system
	configuration files.
	(mmap_enlarge): Enlarge mapped regions only if MMAP_ALLOCATED_P
	returns 0.

2002-04-13  Eli Zaretskii  <eliz@is.elta.co.il>

	* unexelf.c (unexec) [__sgi]: Undo the change from 2002-01-20.

2002-04-12  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (sync_frame_with_window_matrix_rows): Don't give frame
	rows marginal areas.
	(Fdump_frame_glyph_matrix) [GLYPH_DEBUG]: New function.
	(syms_of_xdisp) [GLYPH_DEBUG]: Defsubr it.

2002-04-01  Stefan Monnier  <monnier@cs.yale.edu>

	* xterm.c (x_set_toolkit_scroll_bar_thumb) <USE_MOTIF>: